--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
         <h1><span class="italic">This is</span> Light Work</h1>
         
         <div class="intro">
-            At Light Work, I help leaders navigate complex transitions and growth, clarify organizational challenges and core story, and identify unseen opportunities. My intuitive approach combines strategic insight with operational expertise to create clarity where it's needed most
+            At Light Work, I work with founders and leaders navigating transitions and anticipating transformations — offering thought partnership, strategic clarity, and narrative development for people building what matters. My intuitive approach combines strategic insight with operational expertise to create clarity. 
         </div>
 
         <div class="divider"></div>
