Add eye favicon and og/SEO meta tags to all pages

--- a/about.html
+++ b/about.html
@@ -9,6 +9,15 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Baskervville:ital@0;1&family=EB+Garamond:ital,wght@0,400;0,500;1,400&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/styles.css">
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="Light Work Studios">
+  <meta property="og:title" content="About — Light Work Studios">
+  <meta property="og:description" content="Haley Hoffman — strategist, narrative architect, consigliere. Background at TED, Incandescent, and years of advisory for founders, executives, and creative leaders.">
+  <meta property="og:url" content="https://thisislight.work/about.html">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="About — Light Work Studios">
+  <meta name="twitter:description" content="Haley Hoffman — strategist, narrative architect, consigliere. Background at TED, Incandescent, and years of advisory for founders, executives, and creative leaders.">
   <script>if(localStorage.getItem('lw-theme')==='ink')document.documentElement.dataset.palette='ink';</script>
 </head>
 <body data-page="about">
