Rename to Bookend Session, reorder tiers ascending, remove price from The Work, drop legal paragraph from About

--- a/connect.html
+++ b/connect.html
@@ -61,12 +61,12 @@
 
       <!-- Session booking -->
       <div style="margin-top:6rem; padding-top:5rem; border-top:1px solid var(--border);" id="session">
-        <span class="section-label">Book a Session</span>
+        <span class="section-label">Book a Bookend Session</span>
         <p style="font-size:1.05rem; line-height:1.78; max-width:var(--max-prose); color:var(--text-secondary); margin-bottom:3rem;" data-field="session_description">A short intake call followed by a full working session. Full attention, no ongoing commitment. Good for a pressure-test, a specific crossroads, or when you need someone outside the room to tell you what they see.</p>
 
         <div class="session-pricing-table" style="margin-bottom:3.5rem;">
           <div class="price-block">
-            <span class="price-label">Session</span>
+            <span class="price-label">Bookend Session</span>
             <span class="price-amount">$1,000</span>
           </div>
         </div>
