--- a/the-work.html
+++ b/the-work.html
@@ -50,6 +50,14 @@
 
     <!-- Tier index -->
     <nav class="tier-index fade-in" aria-label="Engagement types">
+      <a href="#tier-session" class="tier-index-item">
+        <svg viewBox="0 0 100 100" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
+          <circle cx="50" cy="33" r="22"/>
+          <line x1="50" y1="55" x2="50" y2="80"/>
+          <line x1="36" y1="68" x2="64" y2="68"/>
+        </svg>
+        <span>Bookend Session</span>
+      </a>
       <a href="#tier-residency" class="tier-index-item">
         <svg viewBox="0 0 100 100" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
           <polygon points="50,12 88,76 12,76"/>
@@ -74,14 +82,6 @@
         </svg>
         <span>Incubator</span>
       </a>
-      <a href="#tier-session" class="tier-index-item">
-        <svg viewBox="0 0 100 100" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
-          <circle cx="50" cy="33" r="22"/>
-          <line x1="50" y1="55" x2="50" y2="80"/>
-          <line x1="36" y1="68" x2="64" y2="68"/>
-        </svg>
-        <span>Session</span>
-      </a>
     </nav>
 
     <!-- How It Goes -->
@@ -103,30 +103,28 @@
         <!-- Tier content -->
         <div class="tiers-content">
 
-          <div class="tier" data-tier="0" id="tier-residency">
+          <div class="tier" data-tier="0" id="tier-session">
+            <h3 class="tier-name">Bookend Session</h3>
+            <p data-field="session_description">A short intake call followed by a full working session. Full attention, no ongoing commitment. You come with a question, a decision, a knot — we work it together and you leave sharper. Good for a pressure-test, a specific crossroads, or when you need someone outside the room to tell you what they see.</p>
+            <a href="/connect.html#session" class="tier-cta">Book a Bookend Session</a>
+          </div>
+
+          <div class="tier" data-tier="1" id="tier-residency">
             <h3 class="tier-name">Residency</h3>
             <p data-field="residency_description">Three months of steady strategic partnership. Regular sessions, light async access, and a consistent rhythm of support and clarity. I'm a tuning fork for your direction — helping you hear what's already there and move with confidence. You leave with an artifact that captures what we've surfaced together. This is where most engagements begin.</p>
           </div>
 
-          <div class="tier" data-tier="1" id="tier-consigliere">
+          <div class="tier" data-tier="2" id="tier-consigliere">
             <h3 class="tier-name">Consigliere</h3>
             <p data-field="consigliere_description">Ongoing retained advisory — like adding a trusted voice to your board, or creating a board where you don't have one. Regular rhythm, full async access, and the kind of honest, wide-ranging counsel that keeps your thinking sharp across every dimension of what you're building. For leaders who want a strategic partner for the season, not just a project.</p>
           </div>
 
-          <div class="tier" data-tier="2" id="tier-incubator">
+          <div class="tier" data-tier="3" id="tier-incubator">
             <h3 class="tier-name">Incubator</h3>
             <p data-field="incubator_description">Co-building. Your venture takes up residence in my mind. Embedded collaboration, fractional leadership, creative direction — for launches, new chapters, and builds that need a strategic co-creator, not just an advisor. We design the structure together around what you're making.</p>
           </div>
 
-          <p class="tiers-footer-note">Residency, Consigliere, and Incubator engagements begin with a conversation. <a href="/connect.html">Book an intro conversation &mdash; free</a></p>
-
-          <div class="tier" data-tier="3" id="tier-session">
-            <h3 class="tier-name">Session</h3>
-            <span class="tier-price">$1,000</span>
-            <p data-field="session_description">A short intake call followed by a full working session. Full attention, no ongoing commitment. You come with a question, a decision, a knot — we work it together and you leave sharper. Good for a pressure-test, a specific crossroads, or when you need someone outside the room to tell you what they see.</p>
-            <a href="/connect.html#session" class="tier-cta">Book a Session</a>
-          </div>
-
+          <p class="tiers-footer-note">All engagements begin with a free intro conversation. <a href="/connect.html">Book one here &mdash; free</a></p>
           <p class="tiers-footer-note">I believe good counsel should be available to those doing important work. I reserve a small number of spots each season for sliding scale and scholarship engagements — if cost is a barrier, <a href="mailto:haley@thisislight.work">reach out</a>.</p>
 
         </div>
@@ -134,6 +132,13 @@
         <!-- Sticky symbol column -->
         <div class="tiers-symbol-col" aria-hidden="true">
           <div class="tier-symbol-display" id="tierSymbolDisplay">
+
+            <!-- Bookend Session: Venus / mirror ♀ -->
+            <svg class="tier-svg" viewBox="0 0 100 100" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+              <circle cx="50" cy="33" r="22"/>
+              <line x1="50" y1="55" x2="50" y2="80"/>
+              <line x1="36" y1="68" x2="64" y2="68"/>
+            </svg>
 
             <!-- Residency: Air / upward triangle with line -->
             <svg class="tier-svg" viewBox="0 0 100 100" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
@@ -158,13 +163,6 @@
             <!-- Incubator: Water / downward triangle -->
             <svg class="tier-svg" viewBox="0 0 100 100" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
               <polygon points="50,88 88,24 12,24"/>
-            </svg>
-
-            <!-- Session: Venus / mirror ♀ -->
-            <svg class="tier-svg" viewBox="0 0 100 100" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
-              <circle cx="50" cy="33" r="22"/>
-              <line x1="50" y1="55" x2="50" y2="80"/>
-              <line x1="36" y1="68" x2="64" y2="68"/>
             </svg>
 
           </div>
